Make host parameter required, VERSION 1.1.0

--- a/helm/maildev/templates/ingress.yml
+++ b/helm/maildev/templates/ingress.yml
@@ -6,7 +6,7 @@ metadata:
     release: {{ .Release.Name }}
 spec:
   rules:
-    - host: {{ .Values.host }}
+    - host: {{ required "A valid .Values.host entry required!" .Values.host }}
       http:
         paths:
           - path: /
